syntax = "proto3";

package protobuf;

option java_multiple_files = true;
option java_package = "com.bitfury.neo4j.transaction_manager";
option java_outer_classname = "TransactionManagerProto";

service TransactionManager {
  rpc VerifyTransaction (TransactionRequest) returns (TransactionResponse) {}
  rpc ExecuteTransaction (TransactionRequest) returns (TransactionResponse) {}
}

enum Status {
  FAILURE = 0;
  SUCCESS = 1;
}

message TransactionRequest {
  string UUID_prefix = 1;
  repeated string queries = 2;
}

message TransactionResponse {
  Status result = 1;
  DatabaseModifications modifications =  2;
}

message DatabaseModifications {

  repeated CreatedNode created_nodes= 1;
  repeated CreatedRelationShip created_relationships = 2;
  repeated AssignedLabel assigned_labels = 3;
  repeated AssignedNodeProperty assigned_node_properties = 4;
  repeated RemovedRelationProperty removed_relation_properties = 5;
  repeated RemovedNodeProperty removed_node_properties = 6;
  repeated RemovedLabel removed_labels = 7;
  repeated DeletedRelationShip deleted_relationships = 8;
  repeated DeletedNode deleted_nodes = 9;

  message CreatedNode {
    string nodeUUID = 1;
  }

  message CreatedRelationShip {
    string type = 1;
    string start_node_UUID =  2;
    string end_node_UUID = 3;
  }

  message AssignedLabel {
    string node_UUID = 1;
    string name = 2;
  }

  message AssignedNodeProperty {
    string node_UUID = 1;
    string key = 2;
    string previous_value = 3;
    string value = 4;
  }

  message AssignedRelationProperty {
    string relationship_UUID = 1;
    string key = 2;
    string previous_value = 3;
    string value = 4;
  }

  message RemovedRelationProperty {
    string relationship_UUID = 1;
    string key = 2;
  }

  message RemovedNodeProperty {
    string node_UUID = 1;
    string key  = 2;
  }

  message RemovedLabel {
    string node_UUID = 1;
    string name = 2;
  }

  message DeletedRelationShip {
    string type = 1;
    string start_node_UUID = 2;
    string end_node_UUID = 3;
  }

  message DeletedNode {
    string node_UUID = 1;
  }
}



